--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "turnout",
   "description": "A Vue.js project",
   "version": "1.0.0",
-  "author": "davidkatz <15Dkatz@shcp.edu>",
+  "author": "simanta>",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
